--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,11 @@ vrep_matlab/inverse_kinematics.asv
 *.asv
 scene/scene_project5_practice.ttt
 vrep_matlab/T1.mat
+vrep_matlab/fp_step1.m
+vrep_matlab/fp_step1.m
+vrep_matlab/fp_step1.m
+vrep_matlab/fp_step1.m
+vrep_matlab/fp_step2.m
+vrep_matlab/fp_step3.m
+vrep_matlab/fp_step4.m
+vrep_matlab/matlab.mat
